# Aurora

./: .gitignore  ARCHITECTURE.md  AURORA.md  CHANGELOG.md  README.md  REQUIREMENTS.md  bootstrap-install.sh  bootstrap.example.md  config.yaml.example  install.sh  pyproject.toml
aurora/: __init__.py  __main__.py  agent.py  approve.py  bootstrap.py  clipboard.py  colors.py  compact.py  config.py  context.py  engine.py  frontend.py  gitcommit.py  keystore.py  llamadesk.py  logo.py  man.py  mdrender.py  memory.py  patch.py  paths.py  rewind.py  secrets.py  session.py  skills.py  todo.py  tokens.py  tools.py  tui.py  ui.py  websearch.py
aurora/providers/: __init__.py  anthropic.py  base.py  happy_eyeballs.py  openai_compat.py  remote_context_limits.json
tests/: __init__.py  test_architecture.py  test_bootstrap_network.py  test_core.py  test_expand_newlines.py  test_finish.py  test_gitcommit.py  test_memory.py  test_patch.py  test_rewind.py  test_secrets.py  test_tui.py
