[project]
name = "aurora-agent"
version = "0.1.0"
description = "Aurora — micro terminal coding agent (Anthropic / OpenRouter / local llama.cpp)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    # <4: the TUI leans on 3.x internals (fragment mouse handlers,
    # cursor-anchored scrolling) — vet a major bump before lifting the cap
    "prompt_toolkit>=3.0,<4",
    "keyring>=24.0",
    "cryptography>=42.0",
    "ddgs>=9.0",
]

[project.scripts]
aurora = "aurora.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aurora*"]
